[gd_scene load_steps=2 format=3 uid="uid://2srh8txtq6j0"]

[ext_resource type="Script" uid="uid://dk4n10lf43i5b" path="res://scripts/hud.gd" id="1_ahhtf"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahhtf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="DeepOcean" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 8.0
offset_right = 142.0
offset_bottom = 31.0
text = "Deep Ocean"

[node name="Ocean" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 56.0
offset_right = 142.0
offset_bottom = 79.0
text = "Ocean"

[node name="Sand" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 142.0
offset_bottom = 119.0
text = "Sand"

[node name="GrassLand" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 136.0
offset_right = 142.0
offset_bottom = 159.0
text = "Grass Land"

[node name="Forest" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 8.0
offset_right = 398.0
offset_bottom = 31.0
text = "Forest"

[node name="LowLand" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 56.0
offset_right = 398.0
offset_bottom = 79.0
text = "Low Land"

[node name="HighLand" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 96.0
offset_right = 398.0
offset_bottom = 119.0
text = "High Land"

[node name="Mountain" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 136.0
offset_right = 398.0
offset_bottom = 159.0
text = "Mountain"

[node name="Seed" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 8.0
offset_right = 46.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Seed"

[node name="Seed3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -42.0
offset_top = 72.0
offset_right = 52.0
offset_bottom = 95.0
grow_horizontal = 2
text = "Zoom"

[node name="DeepOceanScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
offset_top = 40.0
offset_right = 192.0
offset_bottom = 56.0
min_value = -1.0
max_value = 1.0
step = 0.05
value = -0.5

[node name="OceanScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
offset_top = 80.0
offset_right = 192.0
offset_bottom = 96.0
min_value = -1.0
max_value = 1.0
step = 0.05
value = -0.19999999999999996

[node name="SandScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
offset_top = 120.0
offset_right = 192.0
offset_bottom = 136.0
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.10000000000000009

[node name="GrassLandScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 60.0
offset_right = 192.0
offset_bottom = 76.0
grow_vertical = 2
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.19999999999999996

[node name="ForestScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = -60.0
offset_right = 448.0
offset_bottom = -44.0
grow_vertical = 2
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.30000000000000004

[node name="LowLandScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = -20.0
offset_right = 448.0
offset_bottom = -4.0
grow_vertical = 2
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.5

[node name="HighLandScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = 20.0
offset_right = 448.0
offset_bottom = 36.0
grow_vertical = 2
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.6000000000000001

[node name="MountainScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 256.0
offset_top = 60.0
offset_right = 448.0
offset_bottom = 76.0
grow_vertical = 2
min_value = -1.0
max_value = 1.0
step = 0.05
value = 0.7

[node name="FrequencyScroll" type="HScrollBar" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.2
max_value = 1.0
step = 0.1
value = 0.2

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -32.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Generate"

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_bottom = 32.0
grow_horizontal = 0
text = "Exit"

[node name="Seed2" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 32.0
offset_right = 48.0
offset_bottom = 63.0
grow_horizontal = 2

[node name="Sizey" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 14.0
offset_top = 128.0
offset_right = 110.0
offset_bottom = 159.0
grow_horizontal = 2
max_value = 1000.0
step = 10.0

[node name="Sizex" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 128.0
offset_right = 6.0
offset_bottom = 159.0
grow_horizontal = 2
max_value = 1000.0
step = 10.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "WASD movimento Q e E zoom"

[connection signal="value_changed" from="Panel/DeepOceanScroll" to="." method="_on_deep_ocean_scroll_value_changed"]
[connection signal="value_changed" from="Panel/OceanScroll" to="." method="_on_ocean_scroll_value_changed"]
[connection signal="value_changed" from="Panel/SandScroll" to="." method="_on_sand_scroll_value_changed"]
[connection signal="value_changed" from="Panel/GrassLandScroll" to="." method="_on_grass_land_scroll_value_changed"]
[connection signal="value_changed" from="Panel/ForestScroll" to="." method="_on_forest_scroll_value_changed"]
[connection signal="value_changed" from="Panel/LowLandScroll" to="." method="_on_low_land_scroll_value_changed"]
[connection signal="value_changed" from="Panel/HighLandScroll" to="." method="_on_high_land_scroll_value_changed"]
[connection signal="value_changed" from="Panel/MountainScroll" to="." method="_on_mountain_scroll_value_changed"]
[connection signal="value_changed" from="Panel/FrequencyScroll" to="." method="_on_frequency_scroll_value_changed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Panel/Seed2" to="." method="_on_seed_2_value_changed"]
[connection signal="value_changed" from="Panel/Sizey" to="." method="_on_sizey_value_changed"]
[connection signal="value_changed" from="Panel/Sizex" to="." method="_on_sizex_value_changed"]
